examples/test/testpolicy10381.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10381
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key42: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value14
          key8: value8
          key49: value3
      podSelector:
        matchLabels:
          key29: value19
          key5: value4
